# BastowSynth.V2

./: .clang-format  .gitignore  CMakeLists.txt  README.md
Source/: BASPluginProcessor.cpp  BASPluginProcessor.h  CMakeLists.txt  ParamId.h  PluginEditor.cpp  PluginEditor.h
Source/DSP/: CMakeLists.txt  Osc.cpp  Osc.h  WaveGen.cpp  WaveGen.h  WaveSetup.cpp  WaveSetup.h
Source/LAF/: CMakeLists.txt  CustomButton.cpp  CustomButton.h  FreqAProp.cpp  FreqAProp.h  FreqSLAF.cpp  FreqSLAF.h  GainSLAF.cpp  GainSLAF.h
Source/MainComponents/: CMakeLists.txt  M_Component1.cpp  M_Component1.h
Source/VolumeComponents/: CMakeLists.txt  Component_Placement.cpp  Component_Placement.h  V_Component1.cpp  V_Component1.h  V_Component2.cpp  V_Component2.h  V_Component3.cpp  V_Component3.h
